src/plone/app/theming/browser/resources/mapper.css
/* Give us some more real-estate */
#portal-top,
#viewlet-above-content,
#portal-breadcrumbs,
#portal-footer,
#portal-colophon,
#portal-siteactions {
    display: none;
}

/* Buttons */
#themeMapper button,
#themeMapper input.context,
#themeMapper input.standalone {
    padding: 4px;
    margin: 3px 0 3px 0;
}

#helpButtonForm {
    display: inline;
    margin-left: 1em;
}

.globalToolbar {
    margin: 1em 0;
}

/* Panels */

#content #editor,
#content .source-editor {
    margin: 0;
    padding: 0;
    border: none;
    background: none;

    border: solid #eee 1px;

    width: 100%;
    height: 300px;
    position: relative;
}


.splitview iframe,
#content .source-editor {
    width: 100%;
    height: 300px;
    border: solid #eee 1px;
    position: relative;
}

.splitview iframe.fullscreen-frame {
    height: 600px;
}

.splitview {
    margin-left: -1em;
}

.panel-toolbar {
    float: right;
    margin: 0 -10px 5px 0;
}

.panel-toolbar button {
    padding: 3px;
}

.panel-toolbar label {
    font-weight: normal;
}

.inspector-switch {
    float: right;
    margin-left: 5px;
}

.panel-footer label {
    vertical-align: middle;
}

.footer-help {
    margin-top: 7px;
}

#file-selector,
.save-button {
    margin-right: 5px;
    vertical-align: middle !important;
}

#theme-panel, #content-panel {
    height: 390px;
}

#rules-editor {
    border-bottom: solid 1px #EEE;
    padding-bottom: 10px;
    margin-bottom: 10px;
}

/* Buttons */

#readonlyActions {
    margin: 10px 0;
}

#secondary-buttons {
    margin-left: 1em;
}

.fullscreen {
    vertical-align: top;
    display: inline-block;
    line-height: 12px;
    padding: 0 0 0 18px;
    margin: 5px 0 0 2px;
    background-image: url('./full.png');
    background-repeat: no-repeat;
    text-decoration: none;
    border-bottom: none !important;
    color: #333 !important;
    font-size: 90%;
    content: none;
}
.fullscreenActive {
    background-image: url('./small.png');
}

.sourceToggle {
    vertical-align: top;
    display: inline-block;
    line-height: 12px;
    padding: 0 0 0 20px;
    margin: 5px 0 0 5px;
    background-image: url('./source.png');
    background-repeat: no-repeat;
    text-decoration: none;
    border-bottom: none !important;
    color: #333 !important;
    font-size: 90%;
    content: none;
}
.sourceActive {
    background-image: url('./preview.png');
}

.refresh {
    vertical-align: top;
    display: inline-block;
    line-height: 12px;
    padding: 0 0 0 12px;
    margin: 4px 0 0 5px;
    background-image: url('./refresh.png');
    background-repeat: no-repeat;
    text-decoration: none;
    border-bottom: none !important;
    color: #333 !important;
    font-size: 90%;
    content: none;
}

/* Wizard */

#new-rule-wizard {
    width: auto;
}

#new-rule-type-panel {
    white-space: nowrap;
}

#new-rule-type-panel label,
#new-rule-selector-panel label {
    font-weight: normal;
    padding-left: 0.5em;
}

#new-rule-output-panel {
    clear: both;
    padding: 1em 0;
}

#new-rule-output-panel textarea {
    height: 6em;
    width: 50em;
}

#new-rule-reuse-panel {
    margin-top: 10px;
    max-width: 450px;
}

.new-rule-actions {
    clear: both;
    margin-top: 1em;
}

#new-rule-wizard label {
    font-size: 120%;
}

#new-rule-wizard .pb-ajax .documentDescription{
    padding: 0 0 5px 0;
    white-space: nowrap;
    font-weight: normal;
}

#new-rule-wizard .pb-ajax .input{
    padding: 5px 5px 5px 0;
    min-width: 280px;
}

#new-rule-wizard .pb-ajax .input input{
    width: 100%;
    padding-left: 0;
}


#new-rule-wizard .pb-ajax .formControls{
    margin:0;
    padding: 5px 5px 5px 0;
}

#new-rule-wizard .pb-ajax .formControls input{
    margin-right: 5px;
}

#themeMapper .wizard-cancel {
    margin-top: -3px;
}


/* Preview */
.source-editor {
    display: none;
}

/* Frame info */

.frame-info {
    background-color: #EEEEEE;
    height: 1.5em;
    margin-right: -2px;
    padding: 0 5px;
    vertical-align: middle;
}

.frame-shelf {
    float: right;
}

.clear-shelf {
    font-size: 85%;
    vertical-align: top;
    text-decoration: none;
    border-bottom: none !important;
}

